# 3d-diy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
deploy/: 3d-diy-backup.cron
src/diy_bot/: __init__.py  backup.py  config.py  handlers.py  main.py  member_repository.py  models.py  presentation.py  repository.py  states.py
tests/: test_backup.py  test_config.py  test_handlers.py  test_member_repository.py  test_presentation.py  test_repository.py
