[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "zhk-3d-diy-bot"
version = "0.1.0"
description = "Telegram bot for a local 3D printing and DIY community"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.29,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[project.scripts]
diy-bot = "diy_bot.main:run"
diy-bot-backup = "diy_bot.backup:run"

[tool.hatch.build.targets.wheel]
packages = ["src/diy_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
